EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==02/18/2009==
Trevius: SoF - Combat Damage message now show up in the chat window
Trevius: SoF - GM Skill Trainers will now actually train skills

==02/17/2009==
Trevius: SoF - Added Drakkin race to the source so $race and probably other race related stuff can use it.
Trevius: SoF - Added multiple opcodes
Trevius: SoF - Cleaned up the patch_SoF.conf file some
Derision: SoF - Enter Tutorial/Return Home buttons work - Enter Tutorial directly on char creation does not.
Derision: SoF - OP_ZonePlayerToBind (no more disconnection on death).
Derision: SoF - Target nearest NPC (F8) now works.
Derision: SoF - /who all now works.
cavedude00: SellRate column in items will now help determine an item's sell price.
cybernine186: Optional system to ensure GMs are logging on from a known IP.
Trevious: SoF - Drakkin now gain stats from items and weapons now work for combat
Trevious: SoF - Drakkin now start with Common Tongue, Dragon and Elder Dragon Languages maxed

Required SQL: utils/sql/svn/340_gm_ips.sql 

==02/16/2009==
Trevius: SoF - The Item Struct should be aligned almost perfectly now.
Trevius: SoF - Merchant Lists, Buying and Selling are now all functional
Trevius: SoF - Looting Items and Currency from Corpses is now functional
Trevius: SoF - Item Links are now functional
Trevius: SoF - Combat animation is now functional
Trevius: SoF - More opcodes added/updated
Trevius: SoF - Titanium users will now see Drakkins (and any race over 473) as a normal Human race

==02/15/2009==
KLS: SoF - Item movement and bag support.
AndMetal: Augments are now visible when linking items.
Trevius: SoF - Adjusted the new Item Structure to align more fields
Trevius: SoF - Added OP_Consume and OP_LootRequest opcodes
cavedude00: (AndMetal) AAs now use skill_id instead of index for prereqs.